# gcs_mcp_server

./: .gitignore  AUTH_DOCUMENTATION.md  Dockerfile  MCP_DOCUMENTATION.md  README.md  ROADMAP.md  deploy.bat  deploy.py  main.py  pyproject.toml
src/gcs_mcp_server/: __main__.py
tests/: conftest.py  integration_test.py
